# OCR-Projects

./: ocr-easy.py  pad_dle.py  tempCodeRunnerFile.py  tesser.py  transform.py
OCR-Agent/ocragent/: README.md  pyproject.toml
OCR-Agent/ocragent/src/ocragent/: crew.py  main.py
OCR-Agent/ocragent/src/ocragent/config/: agents.yaml  tasks.yaml
OCR-Agent/ocragent/src/ocragent/tools/: para_from_image_tool.py  word_from_image_tool.py
ocr/: playwithexcel.py  suppoerted languages.xlsx  supported languages  text_extraction.py
ocr_crew/: README.md  pyproject.toml
ocr_crew/src/ocr_crew/: crew.py  main.py
ocr_crew/src/ocr_crew/config/: agents.yaml  tasks.yaml
ocr_crew/src/ocr_crew/tools/: easy1tool.py  padtool.py  paratool.py
tools/: easy-para.py  easy-words.py
