[project]
name = "ocr_crew"
version = "0.1.0"
description = "ocr-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
ocr_crew = "ocr_crew.main:run"
run_crew = "ocr_crew.main:run"
train = "ocr_crew.main:train"
replay = "ocr_crew.main:replay"
test = "ocr_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
