[project]
name = "ocragent"
version = "0.1.0"
description = "ocrAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
ocragent = "ocragent.main:run"
run_crew = "ocragent.main:run"
train = "ocragent.main:train"
replay = "ocragent.main:replay"
test = "ocragent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
